fix: add z-index to modal overlay

--- a/addon/styles/_pix-modal.scss
+++ b/addon/styles/_pix-modal.scss
@@ -6,6 +6,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 1000;
 }
 
 $modal-padding: 24px;
